--- a/metadata/preview/azure-resourcemanager-appplatform.json
+++ b/metadata/preview/azure-resourcemanager-appplatform.json
@@ -1,7 +1,7 @@
 {
   "Name": "azure-resourcemanager-appplatform",
-  "Version": "2.19.0-alpha.20220907.2",
-  "DevVersion": "2.19.0-alpha.20220907.2",
+  "Version": "2.19.0-alpha.20220907.3",
+  "DevVersion": "2.19.0-alpha.20220907.3",
   "DirectoryPath": "sdk/resourcemanager/azure-resourcemanager-appplatform",
   "ServiceDirectory": "resourcemanager",
   "ReadMePath": "sdk/resourcemanager/azure-resourcemanager-appplatform/README.md",
@@ -10,5 +10,5 @@
   "SdkType": "mgmt",
   "IsNewSdk": true,
   "ArtifactName": "azure-resourcemanager-appplatform",
-  "ReleaseStatus": "2022-09-07"
+  "ReleaseStatus": "Unreleased"
 }
